package Pc;

public interface composite {
	
	public int computar();
	
}
